--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   cached_network_image: ^3.4.1
+  firebase_messaging: ^15.1.3
+  flutter_local_notifications: ^17.2.4
+  http: ^1.2.2
+  firebase_analytics: ^11.3.3
 
 dev_dependencies:
   flutter_test:
