--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_local_notifications: ^17.2.4
   http: ^1.2.2
   firebase_analytics: ^11.3.3
+  web_socket_channel: ^3.0.1
 
 dev_dependencies:
   flutter_test:
